Adding gulpfile.js
Adding basic Connect server

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "nmashton",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-connect": "^5.0.0"
   }
 }
