--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-connect": "^5.0.0"
+    "gulp-connect": "^5.0.0",
+    "gulp-front-matter": "^1.3.0",
+    "gulp-marked": "^1.0.0",
+    "gulp-tap": "^0.1.3",
+    "pug": "^2.0.0-beta6"
   }
 }
