--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "gulp-connect": "^5.0.0",
     "gulp-front-matter": "^1.3.0",
     "gulp-marked": "^1.0.0",
+    "gulp-pug": "^3.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-tap": "^0.1.3",
     "pug": "^2.0.0-beta6"
   }
