--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp": "^3.9.1",
     "gulp-connect": "^5.0.0",
     "gulp-front-matter": "^1.3.0",
+    "gulp-html-prettify": "0.0.1",
     "gulp-marked": "^1.0.0",
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
