--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-batch": "^1.0.5",
     "gulp-connect": "^5.0.0",
     "gulp-front-matter": "^1.3.0",
     "gulp-html-prettify": "0.0.1",
@@ -16,6 +17,7 @@
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-tap": "^0.1.3",
+    "gulp-watch": "^4.3.10",
     "pug": "^2.0.0-beta6"
   }
 }
