--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-tap": "^0.1.3",
+    "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.10",
     "pug": "^2.0.0-beta6"
   }
