--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-marked": "^1.0.0",
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.1.1",
     "gulp-stylus": "^2.5.0",
     "gulp-tap": "^0.1.3",
     "gulp-util": "^3.0.7",
