--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-tap": "^0.1.3",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.10",
-    "pug": "^2.0.0-beta6"
+    "pug": "^2.0.0-beta6",
+    "standard": "^8.4.0"
   }
 }
