--- a/package.json
+++ b/package.json
@@ -3,25 +3,24 @@
   "version": "0.1.0",
   "description": "Source for @nmashton's portfolio site",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node index.js --dev",
+    "build": "node index.js"
   },
   "author": "nmashton",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-batch": "^1.0.5",
-    "gulp-connect": "^5.0.0",
-    "gulp-front-matter": "^1.3.0",
-    "gulp-html-prettify": "0.0.1",
-    "gulp-marked": "^1.0.0",
-    "gulp-pug": "^3.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^2.1.1",
-    "gulp-stylus": "^2.5.0",
-    "gulp-tap": "^0.1.3",
-    "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.10",
+    "metalsmith": "^2.2.0",
+    "metalsmith-beautify": "^0.1.0",
+    "metalsmith-filter": "^1.0.2",
+    "metalsmith-layouts": "^1.6.5",
+    "metalsmith-markdown": "^0.2.1",
+    "metalsmith-rename": "^1.0.0",
+    "metalsmith-serve": "0.0.7",
+    "metalsmith-stylus": "^2.0.0",
+    "metalsmith-watch": "^1.0.3",
+    "minimist": "^1.2.0",
     "pug": "^2.0.0-beta6",
-    "standard": "^8.4.0"
+    "stylus": "^0.54.5"
   }
 }
